Fix white space appearing on navigation pages.

--- a/src/Pages/page.styles.scss
+++ b/src/Pages/page.styles.scss
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+.navigation-page {
+  background-color: black;
+  height: 100vh;
+}
+
 .main-title {
   font-size: 12rem;
   // /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;  */
